--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "geist": "^1.3.1",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "next-auth": "^5.0.0-beta.20",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
