--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.2",
     "@hookform/resolvers": "^3.9.0",
+    "@neondatabase/serverless": "^0.9.5",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -26,13 +27,14 @@
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.439.0",
-    "next": "14.2.8",
+    "next": "^14.2.9",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
