--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,6 @@
     "@next/next/no-page-custom-font": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "react-hooks/exhaustive-deps": "off",
-    "@typescript-eslint/no-unused-vars": "off",
-    "react-hooks/rules-of-hooks": "off"
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
