--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.2",
     "@hookform/resolvers": "^3.9.0",
+    "@kinde-oss/kinde-auth-nextjs": "^2.3.8",
     "@neondatabase/serverless": "^0.9.5",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -21,13 +22,15 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-table": "^8.20.5",
     "@vercel/postgres": "^0.10.0",
+    "argon2": "^0.41.1",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.439.0",
-    "next": "^14.2.9",
+    "next": "^14.2.11",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
@@ -37,6 +40,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
