--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-table": "^8.20.5",
+    "@types/lodash": "^4.17.7",
     "@vercel/postgres": "^0.10.0",
     "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
@@ -29,6 +30,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.439.0",
     "next": "^14.2.11",
     "next-auth": "^5.0.0-beta.20",
