--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.2",
     "@hookform/resolvers": "^3.9.0",
-    "@kinde-oss/kinde-auth-nextjs": "^2.3.8",
+    "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@neondatabase/serverless": "^0.9.5",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -24,17 +24,18 @@
     "@types/lodash": "^4.17.7",
     "@vercel/postgres": "^0.10.0",
     "argon2": "^0.41.1",
-    "bcrypt": "^5.1.1",
+    "argon2id": "^1.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.1",
     "lodash": "^4.17.21",
+    "lucia": "^3.2.0",
     "lucide-react": "^0.439.0",
     "next": "^14.2.11",
-    "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
+    "oslo": "^1.2.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18",
