--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-table": "^8.20.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.7",
     "@vercel/postgres": "^0.10.0",
     "argon2": "^0.41.1",
     "argon2id": "^1.0.1",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
