--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@supabase/supabase-js": "^2.45.4",
+    "@talkjs/react": "^0.1.9",
     "@tanstack/react-table": "^8.20.5",
+    "@types/ably": "^1.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.7",
     "@vercel/postgres": "^0.10.0",
+    "ably": "^2.4.0",
     "argon2": "^0.41.1",
     "argon2id": "^1.0.1",
     "bcrypt": "^5.1.1",
@@ -38,14 +42,19 @@
     "next": "^14.2.11",
     "next-themes": "^0.3.0",
     "oslo": "^1.2.1",
+    "pg": "^8.12.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
+    "react-chat-engine": "^1.11.28",
+    "react-chat-engine-advanced": "^0.1.28",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "talkjs": "^0.26.0",
     "uuid": "^10.0.0",
+    "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
