--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "next": "^14.2.11",
     "next-themes": "^0.3.0",
     "oslo": "^1.2.1",
-    "pg": "^8.12.0",
+    "pg": "^8.13.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-chat-engine": "^1.11.28",
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.24.2",
