--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.2",
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@neondatabase/serverless": "^0.9.5",
@@ -35,6 +36,8 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.1",
@@ -49,6 +52,7 @@
     "react": "^18.3.1",
     "react-chat-engine": "^1.11.28",
     "react-chat-engine-advanced": "^0.1.28",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
