--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "embla-carousel-react": "^8.3.0",
     "geist": "^1.3.1",
     "lodash": "^4.17.21",
     "lucia": "^3.2.0",
