--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "editor.stickyScroll.scrollWithEditor": false
+  "editor.stickyScroll.scrollWithEditor": false,
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true
 }
