--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash": "^4.17.21",
     "lucia": "^3.2.0",
     "lucide-react": "^0.439.0",
+    "nanoid": "^5.0.8",
     "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "oslo": "^1.2.1",
